# ndtensors-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md
.github/workflows/: CI_jl.yml  CI_py.yml  CI_rs.yml
crates/ndtensors/: Cargo.toml
crates/ndtensors-capi/: Cargo.toml
crates/ndtensors-capi/src/: lib.rs
crates/ndtensors/src/: blocksparse_tensor.rs  combiner_tensor.rs  contract.rs  diagblocksparse_tensor.rs  empty_number.rs  error.rs  lib.rs  random.rs  scalar.rs  strides.rs  tensor.rs
crates/ndtensors/src/autodiff/: any_storage.rs  backward.rs  dual.rs  gradients.rs  graph.rs  hessian.rs  mod.rs  saved_tensor.rs  tensor.rs
crates/ndtensors/src/autodiff/ops/: contract.rs  dual_contract.rs  mod.rs
crates/ndtensors/src/backend/: faer_interop.rs  generic.rs  mod.rs  permutation.rs
crates/ndtensors/src/contract/: blocksparse.rs  gemm.rs  mod.rs  naive.rs  properties.rs
crates/ndtensors/src/decomposition/: eigen.rs  exp.rs  mod.rs  polar.rs  positive.rs  ql.rs  qr.rs  svd.rs  util.rs
crates/ndtensors/src/operations/: blocksparse.rs  convert.rs  copy.rs  diag.rs  elementwise.rs  mod.rs  norm.rs  outer.rs  permutedims.rs  slice.rs
crates/ndtensors/src/storage/: buffer.rs  combiner.rs  dense.rs  diag.rs  empty.rs  mod.rs
crates/ndtensors/src/storage/blocksparse/: block.rs  block_dim.rs  block_offsets.rs  diagblocksparse.rs  mod.rs  storage.rs
crates/ndtensors/tests/: test_autodiff.rs  test_combiner.rs  test_diagblocksparse.rs  test_emptynumber.rs  test_emptystorage.rs  test_linearalgebra.rs
docs/: design.md  ndtensors_architecture.md
julia/NDTensorsRS/: Project.toml
julia/NDTensorsRS/src/: NDTensorsRS.jl
julia/NDTensorsRS/test/: runtests.jl
plans/: snappy-shimmying-wall.md
python/ndtensors_rs/: README.md  hatch_build.py  pyproject.toml  setup.py
python/ndtensors_rs/examples/: jax_contract.py  torch_contract.py
python/ndtensors_rs/src/ndtensors_rs/: __init__.py  _lib.py  _status.py  jax_ops.py  ops.py  tensor.py  torch_ops.py
python/ndtensors_rs/tests/: __init__.py  conftest.py  test_contract.py  test_jax_ops.py  test_readme_examples.py  test_tensor.py  test_torch_ops.py
scripts/: run_python_tests.sh
